[project]
name = "reboundpro"
version = "0.2.0"
description = "Research system for catching intraday-drop rebounds (long) on NASDAQ+NYSE. Simulation only."
requires-python = ">=3.11"
# Runtime deps for the Streamlit Cloud dashboard (Cloud installs from uv.lock).
# dashboard.py -> streamlit, plotly, pandas ; sheets_manager.py -> gspread,
# google-auth ; config.py -> stdlib only. (Collector scripts run in GitHub
# Actions, which pip-installs their own deps in the workflow.)
dependencies = [
    "streamlit",
    "plotly",
    "pandas",
    "gspread",
    "google-auth",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

# Dev/test deps. Collector scripts (scanner/collector/intraday) import these but
# run in GitHub Actions (pip-installed there). Listed here so `uv run pytest`
# resolves the full test env locally without a manual --with chain.
[dependency-groups]
dev = [
    "pytest",
    "numpy",
    "pytz",
    "yfinance",
    "exchange_calendars",
    "finvizfinance",
]
